# oh-my-gemini

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  COVERAGE.md  Cargo.toml  DEMO.md  GEMINI.md  README.md  RELEASE_BODY.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
docs/: STATE_MODEL.md  _config.yml  adapt.md  agents.html  gemini-native-hooks.md  getting-started.html  guidance-schema.md  hooks-extension.md  index.html  integrations.html  interop-team-mutation-contract.md  migration-mainline-post-v0.4.4.md  openclaw-integration.de.md  openclaw-integration.es.md  openclaw-integration.fr.md  openclaw-integration.it.md  openclaw-integration.ja.md  openclaw-integration.ko.md  openclaw-integration.md  openclaw-integration.pt.md  openclaw-integration.ru.md  openclaw-integration.tr.md  openclaw-integration.uk.md  openclaw-integration.vi.md  openclaw-integration.zh-TW.md  openclaw-integration.zh.md  prompt-guidance-contract.md  prompt-migration-changelog.md  qa-plan-0.4.2.md  release-body-0.9.0.md  release-body-0.9.1.md  release-notes-0.11.13.md  release-notes-0.11.9.md  release-notes-0.12.0.md  release-notes-0.12.1.md  release-notes-0.12.3.md  release-notes-0.12.4.md  release-notes-0.12.5.md  release-notes-0.12.6.md  release-notes-0.13.0.md  (+16 more)
docs/readme/: README.md  (+15 more)
missions/: README.md
playground/: README.md
prompts/: analyst.md  executor.md  explore-harness.md  explore.md  planner.md  qa-tester.md  sisyphus-lite.md  team-executor.md  test-engineer.md  verifier.md
src/: index.ts
templates/: AGENTS.md  GEMINI.md  catalog-manifest.json
(+508 files in other folders)
